# kiditem

./: .dockerignore  .env.example  .env.test.example  .gitignore  .graphifyignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DESIGN.md  README.md  TODOS.md  _tmp_poll.cjs  docker-compose.production.yml  docker-compose.staging.yml  docker-compose.test.yml  docker-compose.yml  kiditem_list.xlsx  knip.jsonc  package-lock.json  package.json  skills-lock.json  vitest.config.ts
.claude/: settings.json
agents/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  pyproject.toml  requirements.txt
agents/scripts/: register-cli-agents.sql  scrape.py
agents/src/: config.py  db.py  runner.py  server.py
agents/src/agents/: base.py  inventory.py
agents/src/agents/ads_collector/: __init__.py  agent.py
agents/src/agents/content/: agent.py  data_converter.py  http_utils.py  image_generator.py  image_translator.py  models.py  oneshot.py  paths.py  pipeline_base.py  renderer.py  template_pipeline.py
agents/src/agents/dashboard_sync/: __init__.py  agent.py
agents/src/agents/image_edit/: __init__.py  agent.py  http_utils.py
agents/src/agents/render/: __init__.py  agent.py
agents/src/agents/review_collector/: __init__.py  agent.py
agents/src/agents/sourcing/: __init__.py  agent.py  douyin_monitor.py  matcher_1688.py  scraper.py
agents/src/agents/wing_collector/: __init__.py  agent.py
agents/src/core/: ai_client.py  ai_cost.py  providers.py
agents/tests/: conftest.py  test_ai_client_gemini_direct.py  test_content_agent.py  test_image_edit_agent.py  test_template_pipeline.py
(+5005 files in other folders)
