[project]
name = "kiditem-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "websockets>=13.0",
    "rebrowser-playwright>=1.49.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
