[project]
name = "kiditem-agents"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.40.0",
    "pydantic>=2.0.0",
    "rebrowser-playwright>=1.49.0",
    "fal-client>=0.5.0",
    "structlog>=24.0.0",
    "langfuse>=4.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "Pillow>=10.0.0",
    "rembg[cpu]>=2.0.60",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
